--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,19 @@
 body {
-  background-color: red;
+  background-color: rgba(248, 147, 147, 0.486);
+}
+
+form div:nth-child(1) {
+  border: 10px solid gold;
+  font-size: 10px;
+  padding: 10px;
+}
+form div:nth-child(2) {
+  border: 1em solid gold;
+  font-size: 1em;
+  padding: 1em;
+}
+form div:nth-child(3) {
+  border: 2em solid gold;
+  font-size: 2em;
+  padding: 2em;
 }/*# sourceMappingURL=style.css.map */
