--- a/style/style.scss
+++ b/style/style.scss
@@ -3,34 +3,65 @@ body{
 
 }
 
+div {
+    color: green;
+    max-width: 50%;
+    text-align: center;
+    
 
+}
 
-    @mixin test($size) {
-        border: $size solid gold;
+div .col {
+    // border: 2px dashed green;
+    padding-top: 3rem!important;
+    margin: 2rem 0 -3rem 3rem;
+    position: relative;
+    left: 12rem;
+    text-align: center;
+    
+}
+
+    @mixin border($size) {
+        border: $size*0.3 solid rgb(0, 102, 255);
         font-size: $size;
-        padding: $size;
+        padding: $size*1.5;
     }
+
+div div {
+    &:nth-child(1){
+        @include border (18px)
+    }
+    &:nth-child(2){
+        @include border(14px)
+    }
+}
     
+input #inputPassword4 {
+    
+}
 
-
+label .form-label {
+    margin-top: 10px ;
+}
 form div {
-    
     
 
 
     &:nth-child(1) {
-        // border: 2px dashed rgb(4, 124, 0);
-        @include test(10px);
+        @include border (20px)
     }
 
     &:nth-child(2) {
-        // border: 2px dashed rgb(1, 1, 231);
-        @include test(1em);
+        @include border(15px);
     }
 
     &:nth-child(3) {
-        @include test(2em);
-        // border: 2px dashed black;
+        @include border(10px);
+    }
+
+    &:nth-child(4) {
+        @include border(30px)
+        
     }
 
 
