--- a/style/style.scss
+++ b/style/style.scss
@@ -1,69 +1,7 @@
-body{
-    background-color: rgba(248, 147, 147, 0.486);
-
+body {
+    max-width: 800px;
 }
 
-div {
-    color: green;
-    max-width: 50%;
-    text-align: center;
-    
-
-}
-
-div .col {
-    // border: 2px dashed green;
-    padding-top: 3rem!important;
-    margin: 2rem 0 -3rem 3rem;
-    position: relative;
-    left: 12rem;
-    text-align: center;
-    
-}
-
-    @mixin border($size) {
-        border: $size*0.3 solid rgb(0, 102, 255);
-        font-size: $size;
-        padding: $size*1.5;
-    }
-
-div div {
-    &:nth-child(1){
-        @include border (18px)
-    }
-    &:nth-child(2){
-        @include border(14px)
-    }
-}
-    
-input #inputPassword4 {
-    
-}
-
-label .form-label {
-    margin-top: 10px ;
-}
-form div {
-    
-
-
-    &:nth-child(1) {
-        @include border (20px)
-    }
-
-    &:nth-child(2) {
-        @include border(15px);
-    }
-
-    &:nth-child(3) {
-        @include border(10px);
-    }
-
-    &:nth-child(4) {
-        @include border(30px)
-        
-    }
-
-
-
+.row g-3 {
+    max-width: 99%;
 }
